Fix missing sharedprops, channel overflow issues

--- a/src/Components/Buttons/AvatarTextButton/AvatarTextButton.css
+++ b/src/Components/Buttons/AvatarTextButton/AvatarTextButton.css
@@ -14,6 +14,7 @@
   border-radius: var(--global-border-radius) !important;
 
   width: 100%;
+  height: 100%;
 
   cursor: pointer;
 
@@ -28,6 +29,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow: hidden;
 
   margin-left: var(--global-margin);
 }
